# BregmanProximalGradientMethod

./: .gitignore  Event-based vision sensor for fast and dense single-molecule localization microscopy _ Nature Photonics.mhtml  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  script.js  styles.css  test1.ipynb
configs/: simulation.json
csc_bregman/: __init__.py  data.py  operators.py
docs/: learning_plan_zh.md
experiments/: __init__.py  run_simulation.py
src/csc_bregman/: metrics.py  optim.py  viz.py
tests/: test_core.py
