[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csc-bregman"
version = "0.1.0"
description = "2D convolutional sparse coding and Bregman proximal gradient dictionary learning simulation."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "scipy",
  "matplotlib",
  "scikit-image",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "jupyterlab"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

